--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
             TAG=${CIRCLE_SHA1:0:8}
             DOCKER_HUB_IMAGE=oxisto/titan
             docker tag $DOCKER_HUB_IMAGE $DOCKER_HUB_IMAGE:$TAG
+            docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
             docker push $DOCKER_HUB_IMAGE:$TAG
             docker push $DOCKER_HUB_IMAGE
   deploy_kubernetes:
