--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser-dynamic": "7.0.0",
     "@angular/router": "7.0.0",
     "@auth0/angular-jwt": "^2.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^3.3.1",
+    "bootstrap": "^4.1.3",
     "core-js": "2.5.7",
     "material-design-lite": "^1.2.1",
+    "ng-bootstrap": "^1.6.3",
     "rxjs": "6.3.3",
     "rxjs-compat": "^6.0.0-rc.0",
     "zone.js": "0.8.26"
