--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "7.0.3",
-    "@angular/compiler": "7.0.3",
-    "@angular/compiler-cli": "^7.0.3",
-    "@angular/core": "7.0.3",
-    "@angular/forms": "7.0.3",
-    "@angular/http": "7.0.3",
-    "@angular/platform-browser": "7.0.3",
-    "@angular/platform-browser-dynamic": "7.0.3",
-    "@angular/router": "7.0.3",
-    "@auth0/angular-jwt": "^2.0.0",
+    "@angular/common": "7.2.2",
+    "@angular/compiler": "7.2.2",
+    "@angular/compiler-cli": "^7.2.2",
+    "@angular/core": "7.2.2",
+    "@angular/forms": "7.2.2",
+    "@angular/http": "7.2.2",
+    "@angular/platform-browser": "7.2.2",
+    "@angular/platform-browser-dynamic": "7.2.2",
+    "@angular/router": "7.2.2",
+    "@auth0/angular-jwt": "^2.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "bootstrap": "^4.1.3",
     "core-js": "2.6.3",
@@ -27,16 +27,17 @@
     "ng-bootstrap": "^1.6.3",
     "ngx-clipboard": "^11.1.9",
     "rxjs": "6.3.3",
-    "zone.js": "0.8.26"
+    "tslib": "^1.9.0",
+    "zone.js": "0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.2",
+    "@angular-devkit/build-angular": "~0.12.0",
     "@angular/cli": "7.2.3",
     "@types/material-design-lite": "^1.1.14",
     "@types/node": "^10",
     "codelyzer": "4.5.0",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
-    "typescript": "3.1.6"
+    "typescript": "3.2.4"
   }
 }
