--- a/kubernetes/postgres.yaml
+++ b/kubernetes/postgres.yaml
@@ -1,30 +1,30 @@
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  name: mongodb
+  name: postgres
   namespace: titan
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: mongodb
+        app: postgres
     spec:
       containers:
-      - name: mongodb
+      - name: postgres
         image: mongo
         ports:
-        - containerPort: 27017
+        - containerPort: 5432
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongodb
+  name: postgres
   namespace: titan
 spec:
   selector:
-    app: mongodb
+    app: postgres
   ports:
   - protocol: TCP
-    port: 27017
-    targetPort: 27017
+    port: 5432
+    targetPort: 5432
