--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,10 +31,11 @@
     "zone.js": "0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.0",
+    "@angular-devkit/build-angular": "~0.13.0",
     "@angular/cli": "7.3.1",
     "@types/material-design-lite": "^1.1.14",
-    "@types/node": "^10",
+    "@types/node": "^12",
+    "node-sass": "^4.12.0",
     "codelyzer": "4.5.0",
     "ts-node": "8.0.2",
     "tslint": "5.11.0",
