--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,34 +10,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "7.2.2",
-    "@angular/compiler": "7.2.2",
-    "@angular/compiler-cli": "^7.2.2",
-    "@angular/core": "7.2.2",
-    "@angular/forms": "7.2.2",
-    "@angular/http": "7.2.2",
-    "@angular/platform-browser": "7.2.2",
-    "@angular/platform-browser-dynamic": "7.2.2",
-    "@angular/router": "7.2.2",
+    "@angular/animations": "8.0.0",
+    "@angular/common": "8.0.0",
+    "@angular/compiler": "8.0.0",
+    "@angular/core": "8.0.0",
+    "@angular/forms": "8.0.0",
+    "@angular/platform-browser": "8.0.0",
+    "@angular/platform-browser-dynamic": "8.0.0",
+    "@angular/router": "8.0.0",
     "@auth0/angular-jwt": "^2.1.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
-    "bootstrap": "^4.1.3",
-    "core-js": "2.6.3",
-    "material-design-lite": "^1.2.1",
-    "ng-bootstrap": "^1.6.3",
-    "ngx-clipboard": "^11.1.9",
-    "rxjs": "6.3.3",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.1",
+    "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
+    "@w11k/ngx-componentdestroyed": "^4.0.1",
+    "bootstrap": "^4.3.1",
+    "core-js": "^2.4.1",
+    "flat": "^4.0.0",
+    "moment": "^2.22.2",
+    "ngx-clipboard": "^12.1.0",
+    "rxjs": "^6.5.2",
     "tslib": "^1.9.0",
-    "zone.js": "0.8.29"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "7.3.1",
-    "@types/material-design-lite": "^1.1.14",
-    "@types/node": "^10",
-    "codelyzer": "4.5.0",
-    "ts-node": "8.0.2",
-    "tslint": "5.11.0",
-    "typescript": "3.2.4"
+    "@angular-devkit/build-angular": "^0.800.0",
+    "@angular/cli": "8",
+    "@angular/compiler-cli": "^8.0.0",
+    "@angular/language-service": "^8.0.0",
+    "@types/node": "~12",
+    "codelyzer": "^5.0.0",
+    "ts-node": "~7.0.1",
+    "tslint": "~5.11.0",
+    "typescript": "3.4.5"
   }
 }
