--- a/dev.yml
+++ b/dev.yml
@@ -5,7 +5,9 @@ services:
    image: redis
    ports:
       - 6379:6379
-  mongodb:
-    image: mongo
+  postgres:
+    image: postgres
     ports:
-      - 27017:27017
+      - 5432:5432
+    environment:
+      POSTGRES_DB: titan
