--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.1.2",
-    "@angular/common": "8.1.2",
-    "@angular/compiler": "8.1.2",
-    "@angular/core": "8.1.2",
-    "@angular/forms": "8.1.2",
-    "@angular/platform-browser": "8.1.2",
-    "@angular/platform-browser-dynamic": "8.1.2",
-    "@angular/router": "8.1.2",
+    "@angular/animations": "8.2.0",
+    "@angular/common": "8.2.0",
+    "@angular/compiler": "8.2.0",
+    "@angular/core": "8.2.0",
+    "@angular/forms": "8.2.0",
+    "@angular/platform-browser": "8.2.0",
+    "@angular/platform-browser-dynamic": "8.2.0",
+    "@angular/router": "8.2.0",
     "@auth0/angular-jwt": "^3.0.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
@@ -31,14 +31,19 @@
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.801.0",
-    "@angular/cli": "8.1.3",
-    "@angular/compiler-cli": "^8.1.1",
-    "@angular/language-service": "^8.1.1",
+    "@angular-devkit/build-angular": "^0.802.0",
+    "@angular/cli": "8.2.0",
+    "@angular/compiler-cli": "^8.2.0",
+    "@angular/language-service": "^8.2.0",
     "@types/node": "~12",
     "codelyzer": "^5.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~5.11.0",
-    "typescript": "3.4.5"
+    "typescript": "3.5.3"
+  },
+  "greenkeeper": {
+    "ignore": [
+      "@angular-devkit/build-angular"
+    ]
   }
 }
