--- a/kubernetes/titan.yaml
+++ b/kubernetes/titan.yaml
@@ -54,8 +54,8 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   annotations:
-    kubernetes.io/ingress.class: "nginx"    
-    certmanager.k8s.io/issuer: "letsencrypt-prod"
+    kubernetes.io/ingress.class: "nginx"
+    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
   name: titan
   namespace: titan
 spec:
