--- a/kubernetes/redis.yaml
+++ b/kubernetes/redis.yaml
@@ -5,6 +5,9 @@ metadata:
   namespace: titan
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: redis
   template:
     metadata:
       labels:
