--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Deploy Kubernetes
         run: |
           curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && chmod +x kubectl
-          mkdir -p ~/.kube && echo ${{ secrets.KUBECONFIG }} > ~/.kube/config
+          mkdir -p ~/.kube && echo "${{ secrets.KUBECONFIG }}" > ~/.kube/config
           export TAG=`expr substr $GITHUB_SHA 1 8`
           envsubst < kubernetes/postgres.yaml | kubectl apply -f -
           envsubst < kubernetes/redis.yaml | kubectl apply -f -
