--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.14",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/forms": "8.2.14",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-    "@angular/router": "8.2.14",
+    "@angular/animations": "9.0.1",
+    "@angular/common": "9.0.1",
+    "@angular/compiler": "9.0.1",
+    "@angular/core": "9.0.1",
+    "@angular/forms": "9.0.1",
+    "@angular/platform-browser": "9.0.1",
+    "@angular/platform-browser-dynamic": "9.0.1",
+    "@angular/router": "9.0.1",
     "@auth0/angular-jwt": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
@@ -27,19 +27,19 @@
     "moment": "^2.22.2",
     "ngx-clipboard": "^12.1.0",
     "rxjs": "^6.5.4",
-    "tslib": "^1.9.0",
-    "zone.js": "^0.9.1"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.900.0",
-    "@angular/cli": "8.3.23",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
-    "@types/node": "~13.7.0",
-    "codelyzer": "^5.0.0",
+    "@angular-devkit/build-angular": "~0.900.2",
+    "@angular/cli": "9.0.2",
+    "@angular/compiler-cli": "^9.0.1",
+    "@angular/language-service": "^9.0.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "ts-node": "~8.5.0",
     "tslint": "~5.11.0",
-    "typescript": "3.5.3"
+    "typescript": "3.7.5"
   },
   "greenkeeper": {
     "ignore": [
