--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "titan-dashboard",
+  "name": "titan-frontend",
   "version": "0.0.0",
   "license": "MIT",
   "angular-cli": {},
@@ -10,40 +10,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.0.1",
-    "@angular/common": "9.0.1",
-    "@angular/compiler": "9.0.1",
-    "@angular/core": "9.0.1",
-    "@angular/forms": "9.0.1",
-    "@angular/platform-browser": "9.0.1",
-    "@angular/platform-browser-dynamic": "9.0.1",
-    "@angular/router": "9.0.1",
+    "@angular/animations": "~9.0.0",
+    "@angular/common": "~9.0.0",
+    "@angular/compiler": "~9.0.0",
+    "@angular/core": "~9.0.0",
+    "@angular/forms": "~9.0.0",
+    "@angular/platform-browser": "~9.0.0",
+    "@angular/platform-browser-dynamic": "~9.0.0",
+    "@angular/router": "~9.0.0",
     "@auth0/angular-jwt": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
-    "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
-    "@w11k/ngx-componentdestroyed": "^4.0.1",
     "bootstrap": "^4.3.1",
-    "flat": "^5.0.0",
     "moment": "^2.22.2",
     "ngx-clipboard": "^12.1.0",
-    "rxjs": "^6.5.4",
+    "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.2",
-    "@angular/cli": "9.0.2",
-    "@angular/compiler-cli": "^9.0.1",
-    "@angular/language-service": "^9.0.1",
+    "@angular-devkit/build-angular": "~0.900.1",
+    "@angular/cli": "~9.0.1",
+    "@angular/compiler-cli": "~9.0.0",
+    "@angular/language-service": "~9.0.0",
     "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "ts-node": "~8.5.0",
-    "tslint": "~5.11.0",
-    "typescript": "3.7.5"
-  },
-  "greenkeeper": {
-    "ignore": [
-      "@angular-devkit/build-angular"
-    ]
+    "ts-node": "~8.3.0",
+    "tslint": "~5.18.0",
+    "typescript": "~3.7.5"
   }
 }
