--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -102,6 +102,17 @@
           "options": {
             "browserTarget": "titan-frontend:build"
           }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "tsconfig.app.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
         }
       }
     }
