--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
     "@auth0/angular-jwt": "^4.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
+    "@ng-bootstrap/ng-bootstrap": "6",
     "bootstrap": "^4.3.1",
     "moment": "^2.22.2",
     "ngx-clipboard": "^12.1.0",
@@ -29,8 +29,8 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.1",
-    "@angular/cli": "~9.0.1",
+    "@angular-devkit/build-angular": "~0.900.6",
+    "@angular/cli": "~9.0.6",
     "@angular/compiler-cli": "~9.0.0",
     "@angular/language-service": "~9.0.0",
     "@types/node": "^12.11.1",
