--- a/dev.yml
+++ b/dev.yml
@@ -1,13 +1,26 @@
-version: '3'
+version: "3"
+
+volumes:
+  redis_data: {}
+  postres_data: {}
 
 services:
   redis:
-   image: redis
-   ports:
+    image: redis
+    restart: "unless-stopped"
+    ports:
       - 6379:6379
+    volumes:
+      - "redis_data:/data"
+
   postgres:
     image: postgres
+    restart: "unless-stopped"
     ports:
       - 5432:5432
     environment:
       POSTGRES_DB: titan
+      POSTGRES_HOST_AUTH_METHOD: trust
+    volumes:
+      - "postres_data:/var/lib/postgresql/data"
+      - "./postgres:/docker-entrypoint-initdb.d"
