--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,49 @@
-name: build
-on: 
+on:
   push:
+    branches:
+      - main
+  pull_request:
+    types: [opened, synchronize, reopened]
+
 jobs:
-  build:
+  build-go:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+      - name: Set up Go
+        uses: actions/setup-go@v2.1.3
+        with:
+          go-version: 1.16
+  build-frontend:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.1.5
+        with:
+          node-version: 14
+      - run: |
+          yarn install
+          yarn build
+        working-directory: titan-frontend
+      - name: Archive titan-frontend
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: titan-frontend
+          path: dist/frontend/titan-frontend
+  build-docker:
+    runs-on: ubuntu-latest
+    needs:
+      - build-go
+      - build-frontend
+    steps:
+      - uses: actions/checkout@master
+      - uses: actions/download-artifact@v2
+        with:
+          path: .
+      - run: |
+          ls **
       - name: Build Docker Image
         run: |
           echo "{\"version\": \"${TAG}\"}" > frontend/src/assets/config.json
@@ -22,7 +60,7 @@ jobs:
         if: github.ref == 'refs/heads/master'
         env:
           DOCKER_HUB_IMAGE: oxisto/titan
-          TAG: ${{ github.sha }}        
+          TAG: ${{ github.sha }}
       - name: Deploy Kubernetes
         run: |
           curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && chmod +x kubectl
