--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,13 @@ jobs:
         uses: actions/setup-go@v2.1.3
         with:
           go-version: 1.16
+        run: |
+          CGO_ENABLED=0 GOOS=linux go build -a cmd/server/server.go
+      - name: Archive titan-frontend
+        uses: actions/upload-artifact@v2
+        with:
+          name: server
+          path: server
   build-frontend:
     runs-on: ubuntu-latest
     steps:
@@ -25,12 +32,11 @@ jobs:
       - run: |
           yarn install
           yarn build
-        working-directory: titan-frontend
+        working-directory: frontend
       - name: Archive titan-frontend
-        if: ${{ always() }}
         uses: actions/upload-artifact@v2
         with:
-          name: titan-frontend
+          name: frontend
           path: dist/frontend/titan-frontend
   build-docker:
     runs-on: ubuntu-latest
