--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  build-go:
+  build-server:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
@@ -14,13 +14,15 @@ jobs:
         uses: actions/setup-go@v2.1.3
         with:
           go-version: 1.16
-      - run: |
+      - name: Build
+        run: |
           CGO_ENABLED=0 GOOS=linux go build -a cmd/server/server.go
       - name: Archive titan-frontend
         uses: actions/upload-artifact@v2
         with:
           name: server
           path: server
+
   build-frontend:
     runs-on: ubuntu-latest
     steps:
@@ -44,10 +46,11 @@ jobs:
         with:
           name: frontend
           path: frontend/dist/titan-frontend
+
   build-docker:
     runs-on: ubuntu-latest
     needs:
-      - build-go
+      - build-server
       - build-frontend
     steps:
       - uses: actions/checkout@master
@@ -59,7 +62,6 @@ jobs:
           mkdir -p frontend/dist/titan-frontend
           mv download/server/server .
           mv download/frontend/* frontend/dist/titan-frontend/
-          ls **
           ./sde.sh
       - name: Build Docker Image
         run: |
@@ -73,10 +75,18 @@ jobs:
           docker tag ${DOCKER_HUB_IMAGE}:${TAG} ${DOCKER_HUB_IMAGE} 
           docker push ${DOCKER_HUB_IMAGE}:${TAG}
           docker push ${DOCKER_HUB_IMAGE}
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
         env:
           DOCKER_HUB_IMAGE: oxisto/titan
           TAG: ${{ github.sha }}
+
+  deploy:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    needs:
+      - build-docker
+    steps:
+      - uses: actions/checkout@master
       - name: Deploy Kubernetes
         run: |
           curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && chmod +x kubectl
@@ -84,7 +94,6 @@ jobs:
           envsubst < kubernetes/postgres.yaml | kubectl apply -f -
           envsubst < kubernetes/redis.yaml | kubectl apply -f -
           envsubst < kubernetes/titan.yaml | kubectl apply -f -
-        if: github.ref == 'refs/heads/master'
         env:
           DOCKER_HUB_IMAGE: oxisto/titan
           TAG: ${{ github.sha }}
