--- a/kubernetes/titan.yaml
+++ b/kubernetes/titan.yaml
@@ -55,7 +55,7 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
   name: titan
   namespace: titan
 spec:
